--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Game402</string>
+    <string name="title_activity_dream_video_activty">DreamVideoActivty</string>
 </resources>
